--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "Sercomp",
+  "name": "sercomp",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "dev":"nodemon src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.1",
+    "knex-cli": "^1.0.2",
+    "pg": "^8.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
